Added a 'Cancel Order' button for the User
Changes the status of any 'InLocker' order to 'Canceled.'
Included a confirmation prompt to prevent accidental cancellations.
Chages status to canceled for any InLocker order.
Added confirmation prompt for canceling button.
Fixed bugs after adding cancel order button.

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -21,4 +21,12 @@
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Controllers\OrderController.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="wwwroot\js\OrdersViewUser" />
+    </ItemGroup>
+
 </Project>
