Added visual elements on HomePage
Added CSS file to improve user experience.
Improved SignUp/LogIn forms styling.
Added CSS styling to Admin Dashboard.
Corrected typos in titles.

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -27,6 +27,11 @@
 
     <ItemGroup>
       <Content Remove="wwwroot\js\OrdersViewUser" />
+      <Content Remove="wwwroot\css\LogIn.css" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\images\" />
     </ItemGroup>
 
 </Project>
