--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -34,6 +34,7 @@
       <Content Remove="wwwroot\js\OrdersViewUser" />
       <Content Remove="wwwroot\css\LogIn.css" />
       <Content Remove="Attributes\**" />
+      <Content Remove="Views\Account\LogOut.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
